@@ -1,3 +1,4 @@
+ - Add cross product to class Point
  - Sort mesh entities locally (implemented only for triangles)
  - Add new format for dof maps (preparation for higher-order elements)
  - Code cleanups: NewFoo --> Foo complete
